Closed
Bug 1293949
Opened 9 years ago
Closed 9 years ago
Can't drag and drop folders to upload on dropbox
Categories
(Core :: DOM: Core & HTML, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla52
People
(Reporter: godistance0, Assigned: baku)
References
Details
(Whiteboard: [platform-rel-Dropbox])
Attachments
(1 file)
951 bytes,
patch
|
mayhemer
:
review+
ritu
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:48.0) Gecko/20100101 Firefox/48.0
Build ID: 20160726073904
Steps to reproduce:
Drag and drop a folder onto dropbox.com.
Actual results:
nothing, it won't upload.
Expected results:
The folder should be uploaded.
I thought dropbox didn't have this feature for a long time untill I tried it with Chrome today.
Comment 1•9 years ago
|
||
Looks like a part of bug 1188880.
QA Whiteboard: [bugday-20160815]
Component: Untriaged → DOM
Product: Firefox → Core
See Also: → 1188880
Comment 2•9 years ago
|
||
(In reply to Tooru Fujisawa [:arai] from comment #1)
> Looks like a part of bug 1188880.
Hey :baku, what do you think?
Flags: needinfo?(amarchesini)
Assignee | ||
Comment 3•9 years ago
|
||
Yes. this is a duplicate.
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
Flags: needinfo?(amarchesini)
Resolution: --- → DUPLICATE
Comment 4•9 years ago
|
||
Is this happening with Nightly?
Comment 5•9 years ago
|
||
And is this really a dup of bug 1188880. That one is about the upload API proposal.
Nightly and Aurora should have already the Entries API and webkitdirectory..
I don't have dropbox account. Anyone willing to test?
Comment 6•9 years ago
|
||
David, perhaps you could test latest Nightly or Aurora (assuming I recall correctly your current employer)?
Flags: needinfo?(dzbarsky)
Comment 7•9 years ago
|
||
So, reopening, since this certainly isn't a dup of bug 1188880.
Possibly depending on bug 1288683.
Status: RESOLVED → REOPENED
Ever confirmed: true
Flags: needinfo?(amarchesini)
Resolution: DUPLICATE → ---
Comment 8•9 years ago
|
||
(In reply to Olli Pettay [:smaug] from comment #6)
> David, perhaps you could test latest Nightly or Aurora (assuming I recall
> correctly your current employer)?
Sorry for the delay here, I filter bugmail pretty agressively now and this one didn't make it through. In the future, feel free to email my work accounts for things of this nature (last name at dropbox)
I'll take a look on Tuesday!
Flags: needinfo?(dzbarsky)
Assignee | ||
Comment 9•9 years ago
|
||
I contacted some of the dropbox developers and they will help me with this issue. I'll give update at the end of September.
Flags: needinfo?(amarchesini)
Comment 10•9 years ago
|
||
Hopefully dz could push this in dropbox a bit faster.
Comment 11•9 years ago
|
||
OK, took a look at it. Note that reporter is on Windows and I'm on Mac, so there may be differences.
Dragging a folder from Finder into a folder on the dropbox website works correctly. Also, dropping it on the page outside of the file/folder list works correctly, uploading it to your top-level folder. The individual files in your toplevel folders are not really drop targets, and dropping on there uploads to the closest folder - one could argue that this isn't expected, but the interface does make it clear what will happen and I certainly wouldn't categorize that as "nothing, it won't upload". Chrome exhibits the same exact behavior.
I am testing a new homepage that hasn't shipped yet, but I think the these bits are shared. I will also try testing what we're shipping, just need to figure out how to opt myself out.
Comment 12•9 years ago
|
||
(In reply to Andrea Marchesini [:baku] from comment #9)
> I contacted some of the dropbox developers and they will help me with this
> issue. I'll give update at the end of September.
Who did you contact? I can certainly get things moving faster if there's an actual bug that we can reproduce
Comment 13•9 years ago
|
||
(and btw, we're aiming to ship webkitdirectory and Entries API in FF50.)
Assignee | ||
Comment 14•9 years ago
|
||
> Who did you contact? I can certainly get things moving faster if there's an
> actual bug that we can reproduce
Lennart Jansson and Mindy Zhang. And I was testing the dropbox website with nightly on linux and it was not working.
Flags: needinfo?(dzbarsky)
Updated•9 years ago
|
Assignee: nobody → amarchesini
Priority: -- → P3
Assignee | ||
Comment 15•9 years ago
|
||
Attachment #8794118 -
Flags: review?(bugs)
Comment 16•9 years ago
|
||
Comment on attachment 8794118 [details] [diff] [review]
serializable.patch
honza, this is rather high priority bug. Could you please take a look, or forward to someone who knows about this stuff.
And baku, please explain what is happening here and why this is the right patch :)
Attachment #8794118 -
Flags: review?(bugs) → review?(honzab.moz)
Assignee | ||
Comment 17•9 years ago
|
||
The reason why this patch is needed is because in ::Serialize() we don't consider the DEFER open. This is done everywhere else (Seek, Tell, Available, Read, and so on), but not here. For this reason mFD is null, but mDeferredOpen is true.
This simple fix does the DoPendingOpen() also for ::Serialize(). Without this we send a wrong FD to the parent process, the HttpChannel fails and the XHR will fail as well.
Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(dzbarsky)
![]() |
||
Comment 18•9 years ago
|
||
Comment on attachment 8794118 [details] [diff] [review]
serializable.patch
Review of attachment 8794118 [details] [diff] [review]:
-----------------------------------------------------------------
::: netwerk/base/nsFileStreams.cpp
@@ +578,5 @@
> FileDescriptorArray& aFileDescriptors)
> {
> FileInputStreamParams params;
>
> + if (NS_SUCCEEDED(DoPendingOpen()) && mFD) {
nit: maybe keep the form as:
{
rv = DoPendingOpen();
NS_ENSURE_SUCCESS(rv, rv);
do stuff..
}
Attachment #8794118 -
Flags: review?(honzab.moz) → review+
Assignee | ||
Comment 19•9 years ago
|
||
> nit: maybe keep the form as
I cannot. this function doesn't return a value and the FileInputStreamParams must be populated also if an error occurs.
Comment 20•9 years ago
|
||
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c0ca8b0d966e
nsFileInputStream must do the pending open step before been serialized, r=mayhemer
Comment 21•9 years ago
|
||
[Tracking Requested - why for this release]:
Based on the feedback from baku, with the patch dnd would work with dropbox both with and without e10s.
status-firefox50:
--- → affected
status-firefox51:
--- → affected
status-firefox52:
--- → affected
tracking-firefox50:
--- → ?
tracking-firefox51:
--- → ?
tracking-firefox52:
--- → ?
Assignee | ||
Comment 22•9 years ago
|
||
Comment on attachment 8794118 [details] [diff] [review]
serializable.patch
Approval Request Comment
[Feature/regressing bug #]: IPC, e10s
[User impact if declined]: XHR in content process, when sending real-file Blobs, will fail because underlying nsIInputStream is not correctly opened. This fix is important for shipping Entries API: Google Drive, Dropbox and other important websites depend on this API.
[Describe test coverage new/current, TreeHerder]: green on try.
[Risks and why]: none
[String/UUID change made/needed]: none.
Attachment #8794118 -
Flags: approval-mozilla-beta?
Attachment #8794118 -
Flags: approval-mozilla-aurora?
Comment 25•9 years ago
|
||
bugherder |
Status: REOPENED → RESOLVED
Closed: 9 years ago → 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Flags: qe-verify+
Comment on attachment 8794118 [details] [diff] [review]
serializable.patch
Adding a support for a pretty common scenario, Aurora51+, Beta50+
Attachment #8794118 -
Flags: approval-mozilla-beta?
Attachment #8794118 -
Flags: approval-mozilla-beta+
Attachment #8794118 -
Flags: approval-mozilla-aurora?
Attachment #8794118 -
Flags: approval-mozilla-aurora+
Comment 27•9 years ago
|
||
bugherder uplift |
Comment 28•9 years ago
|
||
bugherder uplift |
Comment 29•9 years ago
|
||
Reproduced the initial issue using Firefox 48.0 RC, verified that the issue does not reproduce anymore using Firefox 50 beta 2, latest Developer Edition 51.0a2 and latest Nightly 52.0a1 across platforms (Windows 10 64-bit, Mac OS X 10.10.5 and Ubuntu 16.04 32-bit).
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Updated•8 years ago
|
platform-rel: --- → ?
Whiteboard: [platform-rel-Dropbox]
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•