Bug 1293949 - nsFileInputStream must do the pending open step before been serialized, r=mayhemer a=ritu CLOSED TREE

--HG--
extra : source : c0ca8b0d966ee28bc6542a762f8a592cf76054d8
extra : amend_source : 6d2b6c17d1be000c70eed11527300a583ee87a40